5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1880_1656.log
== TEST (2019-07-03 14:10:53) 
-- CODE:
from numpy import*

vet = (array(eval(input("Paises: ")))upper().split(',')
		 
print(vet)
-- ERROR:
File "XXXX", line 3
    vet = (array(eval(input()))upper().split(',')
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:08) 
-- CODE:
from numpy import*

vet = (array(eval(input("Paises: ")))append().split(',')
		 
print(vet)
-- ERROR:
File "XXXX", line 3
    vet = (array(eval(input()))append().split(',')
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:17) 
-- CODE:
from numpy import*

vet = (array(eval(input("Paises: ")))upper().split(',')
		 
print(vet)
-- ERROR:
File "XXXX", line 3
    vet = (array(eval(input()))upper().split(',')
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:33) 
-- CODE:
from numpy import*

vet = (array(eval(input("Paises: "))).split(',')
		 
print(vet)
-- ERROR:
File "XXXX", line 5
    print(vet)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:39) 
-- CODE:
from numpy import*

vet = (array(eval(input("Paises: ")))split(',')
		 
print(vet)
-- ERROR:
File "XXXX", line 3
    vet = (array(eval(input()))split(',')
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Paises: ")))upper().split(',')
		 
print(vet)
-- ERROR:
File "XXXX", line 3
    vet = array(eval(input()))upper().split(',')
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:12:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Paises: "))).split(',')
		 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:13:10) 
-- CODE:
from numpy import*

vet = array(eval(input("Paises: "))).split(',')
		 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
